[project]
name = "gpt-register-bot"
version = "0.1.0"
description = "Layered FastAPI web console application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi",
    "fastapi",
    "uvicorn",
]

[project.scripts]
gpt-register-web = "gpt_register_bot.web.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_register_bot"]

[tool.hatch.build.targets.wheel.force-include]
"src/gpt_register_bot/web/ui/templates" = "gpt_register_bot/web/ui/templates"
"src/gpt_register_bot/web/ui/static" = "gpt_register_bot/web/ui/static"

[tool.hatch.build.targets.sdist]
include = [
    "src/gpt_register_bot",
    "README.md",
    "pyproject.toml",
    "web_app.py",
]
